--- a/timetrak/Gemfile
+++ b/timetrak/Gemfile
@@ -18,6 +18,8 @@ gem 'coffee-rails', '~> 4.1.0'
 gem 'tzinfo-data'
 #windows 7 coffee script support
 gem 'coffee-script-source', '1.8.0'
+#url slugging
+gem 'friendly_id', '5.1.0'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
